<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_menu"
        android:title="MENU"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_personal_records"
                android:title="@string/personal_records_title"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_import_export"
                android:icon="@drawable/ic_import_export"
                android:title="@string/import_export"
                app:showAsAction="never">
                <menu>
                    <item
                    android:id="@+id/menu_import"
                    android:title="@string/import_title" />
                    <item
                        android:id="@+id/menu_export"
                        android:title="@string/export_title" />
                </menu>
            </item>

        </menu>


    </item>

</menu>