<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/o2_table_title"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_breathing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/breathing_title"
        android:textColor="#444444"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title" />

    <EditText
        android:id="@+id/input_breathing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_120sec"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_breathing_title" />

    <TextView
        android:id="@+id/txt_first_stop_breathing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/first_breath_stop_title"
        android:textColor="#444444"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/input_breathing" />

    <EditText
        android:id="@+id/input_first_breath_hold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_120sec"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_first_stop_breathing_title" />

    <TextView
        android:id="@+id/txt_breathing_shortage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/breathing_shortage"
        android:textColor="#444444"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/input_first_breath_hold" />

    <EditText
        android:id="@+id/input_shortage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_15sec"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_breathing_shortage_title" />

    <EditText
        android:id="@+id/input_series_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_series_8"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_series_number_title" />

    <TextView
        android:id="@+id/txt_series_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_series"
        android:textColor="#444444"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/input_shortage" />
</android.support.constraint.ConstraintLayout>